--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+# Properties to change log level in runtime
+management.endpoints.web.exposure.include=health,loggers
+management.endpoint.loggers.enabled=true
