Agregando endpoint para verificar los stats. Se agrega H2 como base de datos embebida. Pruebas unitarias. Dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-# Properties to change log level in runtime
-management.endpoints.web.exposure.include=health,loggers
+#Properties to change log level in runtime
+management.endpoints.web.exposure.include=health,loggers,h2console
 management.endpoint.loggers.enabled=true
+
+spring.r2dbc.url= r2dbc:h2:mem:///temp?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.r2dbc.name= sa
+spring.r2dbc.password=
+spring.h2.console.enabled= true
+spring.h2.console.path= /h2-console
+spring.h2.console.port= 8082
