--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.8'
+	implementation 'io.r2dbc:r2dbc-h2:0.9.1.RELEASE'
+	implementation 'com.h2database:h2:2.1.212'
+	implementation 'me.yaman.can:spring-boot-webflux-h2-console:0.0.1'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	runtimeOnly 'io.r2dbc:r2dbc-h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
